<resources>
    <string name="app_name">projetcParts_HEADER_NAVIGATION</string>
    <string name="rowDataTest">one</string>
    <string name="addItemButtonText">add item</string>
    <string name="tableRowName">Name</string>
    <string name="tableRowBrand">Brand</string>
    <string name="tableRowQuantity">Quantity</string>
    <string name="addItemTitle">Add New Item</string>
    <string name="itemNameHint"><i>Item Name</i></string>
    <string name="itemBrandHint"><i>Item brand</i></string>
    <string name="setQuantityHint"><i>Set quantity</i></string>
    <string name="buttonBack">Back</string>
    <string name="buttonCreate">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="template_text">templateText</string>
    <string name="musicButtonDesc">music note</string>
</resources>