<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:id="@+id/scroll_view">

<TableLayout
    android:id="@+id/table_data"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="25dp"
    android:layout_marginHorizontal="15dp"
    android:background="@color/tableHeader">

    <Button
        android:id="@+id/add_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/addItemButtonText" />


    <TableRow android:padding="13dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/tableRowName"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/tableRowBrand"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/tableRowQuantity"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>
    </TableRow>
</TableLayout>


</ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fragmentBackground"
        android:id="@+id/fragment_id">
    </FrameLayout>

</RelativeLayout>
